--- a/final-react/public/index.html
+++ b/final-react/public/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Oxygen&family=Roboto+Mono&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="/style/style.css">
     <title>walshop</title>
 </head>
 <body>
